  - deal w/ encryption better:  tell chunks when the backup target
    will need data, so it can forget cached digest/backlength
    ahead of time w/o errors/warnings later.

0.91 (sep 29 2006)
  - there's now a restore command (brackup-restore)

  - amazon restore support

  - use gpg --trust-model=always for new gpg that is more paranoid.

  - mostly usable.  some more switches would be nice later.  real
    1.00 release will come after few weeks/months of testing/tweaks.

0.80
  - restore works

  - lot more tests

  - notable bug fix with encrypted backups.  metafiles could have wrong sizes.

0.71
  - first release to CPAN, didn't support restoring yet.
    also didn't have a Changes file