@@ -64,6 +64,7 @@ use Brackup;
 
 my ($src_name, $target_name, $opt_verbose, $backup_file, $opt_help);
 my $opt_dryrun;
+my $opt_du_stats;
 
 usage() unless
     GetOptions(
@@ -73,6 +74,7 @@ usage() unless
                'output=s'  => \$backup_file,
                'help'      => \$opt_help,
                'dry-run'   => \$opt_dryrun,
+               'du-stats' => \$opt_du_stats,
                );
 
 if ($opt_help) {
@@ -83,6 +85,13 @@ if ($opt_help) {
 
 my $config = eval { Brackup::Config->load("$ENV{HOME}/.brackup.conf") } or
     usage($@);
+
+if ($opt_du_stats && $src_name) {
+    my $root = eval { $config->load_root($src_name); } or
+        die "Bogus --from name";
+    $root->du_stats;
+    exit 0;
+}
 
 usage() unless $src_name && $target_name;
 
